# Zoutendijk-s-method

./: .clang-format  AvailDirs.cpp  AvailDirs.h  CMakeLists.txt  README.md  diff.h  main.cpp  task.h  task2.h
examples/: main.cpp
include/: AvailDirs.h  AvailDirsInterface.h  diff.h  task1.h  task2.h
src/: AvailDirs.cpp  main.cpp
